header button fix color contrast

--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@ header {/*header settings*/
 }
 
 .headerbtn {
-    border: 2px solid var(--pink);
+    border: 2px solid #DB008B;
     border-radius: 15px;
     padding: .35rem .75rem;
     background-color: var(--very-pale-blue);
-    color: var(--pink);
+    color: #DB008B;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
